db initialization with basic types